--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "dblapi.js": "^2.3.0",
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "express": "^4.16.4",
+    "http": "0.0.0",
+    "superagent": "^4.1.0"
   }
 }
